--- a/web-extension/popup.css
+++ b/web-extension/popup.css
@@ -1,8 +1,3 @@
-.popup-container {
-    width: 250px;
-    padding: 20px;
-  }
-
   *{
     font-family: 'Kanit', sans-serif;
     margin: 0 auto;
@@ -11,13 +6,18 @@
 
 .popup-container{
     width: 260px;
-    height: 130px;
-    padding: 10px 15px 10px 15px;
+    height: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 10px 15px 10px 15px;
+}
+
+.html-container {
+    flex-direction: column;
+    justify-content: center;
     background-color: #39373c;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23ffffff' fill-opacity='0.18' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23ffffff' fill-opacity='0.18' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");   
 }
 
 .pop-title{
@@ -72,4 +72,22 @@ transform: translateY(2px);
 
 .btn-txt{
     font-size: px;
+}
+
+#display-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.display-text{
+   color: white;
+   font-size: 15px;
+}
+
+.label-text{
+    color:white;
+    text-align: center;
+
 }
