return error when sched is empty, removed console.log()s on scripts

--- a/web-extension/popup.css
+++ b/web-extension/popup.css
@@ -78,6 +78,7 @@ transform: translateY(2px);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-bottom: 15px;
 
 }
 
