--- a/web-extension/popup.css
+++ b/web-extension/popup.css
@@ -92,3 +92,20 @@ transform: translateY(2px);
     text-align: center;
 
 }
+
+.display-text-error {
+    color: #DC3545;
+    animation: shake 0.3s ;
+  }
+  
+  @keyframes shake {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      transform: translateX(-15px);
+    }
+    20%, 40%, 60%, 80% {
+      transform: translateX(15px);
+    }
+  }
