add red text  to 'empty schedule found'

--- a/web-extension/popup.css
+++ b/web-extension/popup.css
@@ -94,7 +94,7 @@ transform: translateY(2px);
 }
 
 .display-text-error {
-    color: #DC3545;
+    color: #f72a3f;
     animation: shake 0.3s ;
   }
   
