--- a/web-extension/popup.css
+++ b/web-extension/popup.css
@@ -6,11 +6,12 @@
 
 .popup-container{
     width: 260px;
-    height: 150px;
+    height: 180px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 10px 15px 10px 15px;
+    padding-bottom: 5px;
 }
 
 .html-container {
@@ -78,7 +79,6 @@ transform: translateY(2px);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-bottom: 15px;
 
 }
 
@@ -109,3 +109,16 @@ transform: translateY(2px);
       transform: translateX(15px);
     }
   }
+
+#plugin {
+  color: white;
+  font-size: 10px;
+  text-decoration: none;
+}
+
+.tail {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5px 5px 5px 5px;
+}
