--- a/web-extension/src/css/edit.css
+++ b/web-extension/src/css/edit.css
@@ -1,4 +1,3 @@
-
 /*globals*/
 
 
@@ -111,9 +110,32 @@ th {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
-#dateInput {
+.date-options {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    margin-bottom: 10px;
+}
+
+.date-option {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ical-options {
+    margin-top: 5px;
+}
+
+.ical-options input[type="checkbox"] {
+    margin-right: 5px;
+    vertical-align: middle;
+}
+
+#dateInput, #startDateInput {
     padding: 0.25rem;
     border-radius: 4px;
     outline: none;
@@ -124,7 +146,7 @@ th {
     filter: drop-shadow(0 2px 4px rgba(45, 35, 66, 0.4));
 }
 
-#dateInput:disabled {
+#dateInput:disabled, #startDateInput:disabled {
     background-color: #e4e2e2;
     color: rgba(0, 0, 0, 0.3);
     cursor: not-allowed;
@@ -270,6 +292,3 @@ th {
     text-align: center;
     display: none;
 }
-
-
-
